[project]
name = "muzero-general"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "nevergrad>=1.0.8",
    "numpy>=2.2.3",
    "ray>=2.43.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "wandb>=0.19.8",
]
